[package]
name = "kcp-tokio"
version = "0.3.5"
edition = "2021"
authors = ["Leihu.Xi leihuxi@gmail.com"]
description = "A high-performance async Rust implementation of KCP - A Fast and Reliable ARQ Protocol"
license = "MIT"
keywords = ["kcp", "udp", "arq", "async", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
repository = "https://github.com/leihuxi/rust-kcp"
homepage = "https://github.com/leihuxi/rust-kcp"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }

# Serialization and networking
bytes = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Random number generation
rand = "0.8"

# Lock-free data structures
crossbeam = "0.8"

# Lazy static for global state
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
criterion = "0.5"
tracing-subscriber = "0.3"


[[example]]
name = "simple_echo"
path = "examples/simple_echo.rs"

[[example]]
name = "interop_client"
path = "examples/interop_client.rs"

[[example]]
name = "interop_client_simple"
path = "examples/interop_client_simple.rs"

[[example]]
name = "quick_test"
path = "examples/quick_test.rs"

[[example]]
name = "perf_test_server"
path = "examples/perf_test_server.rs"

[[example]]
name = "perf_test_client"
path = "examples/perf_test_client.rs"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
