[workspace]
members = ["kcp-core"]
resolver = "2"

[package]
name = "kcp-tokio"
version = "0.4.0"
edition = "2021"
authors = ["Leihu.Xi leihuxi@gmail.com"]
description = "A high-performance async Rust implementation of KCP - A Fast and Reliable ARQ Protocol"
license = "MIT"
keywords = ["kcp", "udp", "arq", "async", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
repository = "https://github.com/leihuxi/rust-kcp"
homepage = "https://github.com/leihuxi/rust-kcp"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
# Core protocol engine
kcp-core = { path = "kcp-core", version = "0.1.0" }

# Core async runtime
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "sync", "time", "macros", "io-util", "signal"], optional = true }

# Serialization and networking
bytes = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Lock-free data structures
crossbeam-queue = "0.3"
dashmap = "6.1"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
criterion = "0.5"
tracing-subscriber = "0.3"


[[example]]
name = "simple_echo"
path = "examples/simple_echo.rs"

[[example]]
name = "interop_client_simple"
path = "examples/interop_client_simple.rs"

[[example]]
name = "perf_test_server"
path = "examples/perf_test_server.rs"

[[example]]
name = "perf_test_client"
path = "examples/perf_test_client.rs"



[[bench]]
name = "kcp_bench"
harness = false

[lib]
path = "kcp/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
